removed wrapper class from h1, fixed header height viewport on mobile

--- a/scss/partials/_home-header.scss
+++ b/scss/partials/_home-header.scss
@@ -1,7 +1,6 @@
 // index.html - main header styles
 
 .main-header {
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
